GPX parser introduced.